--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<div class="about-content spad">
 				<h2>About Me</h2>
 				<p>
-					My name is Fateme Baghbani I'm a 21 years old Front End Developer based in Mazandaran. I describe myself as a developer who loves coding, open source, and the web platform. Currently I'm working on my skills as a Front End Developer and also finishing my B.S. Degrees in Software Engineering. In my spare time I like to create and contribute to open source projects. That helps me to learn a lots of new stuff, grow as a developer and support other open source projects. I love travelling and discovering new places.
+					My name is Fateme Baghbani I'm a 21 years old Front End Developer based in Mazandaran. I describe myself as a developer who loves coding, Designing, and the web platform. Currently I'm working on my Skills as a Front End Developer and also finishing my B.S. Degrees in Software Engineering. I love music, travelling and discovering new places.
 				</p>
 			</div>
 
